Create third step and tests for it