@@ -1,4 +1,6 @@
-package com.bad_java.homework.hyperskill.tic_tac_toe_with_ai.part_2;
+package com.bad_java.homework.hyperskill.tic_tac_toe_with_ai.part_3;
+
+import com.bad_java.homework.hyperskill.tic_tac_toe_with_ai.part_3.entity.Player;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -6,7 +8,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.ThreadLocalRandom;
 
 /**
  * @author Kirill Mololkin Kirill-mol 18.08.2021
@@ -15,34 +16,40 @@ public class TicTacToeEngine {
 
 	private final List<List<String>> gameBoard;
 	private States gameState = States.NOT_FINISHED;
-	private int xCounter = 0;
-	private int oCounter = 0;
+	private final Player player1;
+	private final Player player2;
+	private Player curPlayer;
+	private int movesCounter = 0;
 
-	public TicTacToeEngine(List<List<String>> gameBoard) {
+	public TicTacToeEngine(List<List<String>> gameBoard, Player player1, Player player2) {
 		this.gameBoard = gameBoard;
+		this.player1 = player1;
+		this.player2 = player2;
+
+		this.curPlayer = player1;
 	}
 
-	public TicTacToeEngine() {
-		gameBoard = new ArrayList<>(
-				List.of(
-						Arrays.asList("_", "_", "_"),
-						Arrays.asList("_", "_", "_"),
-						Arrays.asList("_", "_", "_")
-				)
+	public TicTacToeEngine(Player player1, Player player2) {
+		this(new ArrayList<>(List.of(
+				Arrays.asList("_", "_", "_"),
+				Arrays.asList("_", "_", "_"),
+				Arrays.asList("_", "_", "_")
+				)),
+				player1,
+				player2
 		);
-
 	}
 
 	public List<List<String>> getGameBoard() {
 		return Collections.unmodifiableList(gameBoard);
 	}
 
-	public String gameBoardToString() {
-		return gameBoardToString(false);
+	public String gameBoardString() {
+		return gameBoardString(false);
 	}
 
-	public String gameBoardToString(boolean isWithState) {
-		StringBuilder stringBuilder= new StringBuilder();
+	public String gameBoardString(boolean isWithState) {
+		StringBuilder stringBuilder = new StringBuilder();
 
 		stringBuilder.append("---------").append(System.lineSeparator());
 
@@ -61,58 +68,26 @@ public class TicTacToeEngine {
 		return stringBuilder.toString();
 	}
 
-	public void makePlayerStep(int coordinate1, int coordinate2) throws IllegalArgumentException {
-		coordinate1--;
-		coordinate2--;
+	public void makePlayerStep() throws IllegalArgumentException {
+		List<Integer> list = curPlayer.makeStep(this.getGameBoard());
 
-		if (coordinate1 < 0 || coordinate1 > gameBoard.size() - 1) {
-			throw new IllegalArgumentException("Coordinates should be from 1 to 3!");
-		} else if (coordinate2 < 0 || coordinate2 > gameBoard.size() - 1) {
-			throw new IllegalArgumentException("Coordinates should be from 1 to 3!");
+		gameBoard.get(list.get(0)).set(list.get(1), String.valueOf(curPlayer.getPlayerSymbol()));
+
+		if (curPlayer == player1) {
+			curPlayer = player2;
+		} else {
+			curPlayer = player1;
 		}
-
-		if (!gameBoard.get(coordinate1).get(coordinate2).equals("_")) {
-			throw new IllegalArgumentException("This cell is occupied! Choose another one!");
-		}
-
-		gameBoard.get(coordinate1).set(coordinate2, "X");
-
+		movesCounter++;
 		defineState();
-	}
 
-	public void makeAiStep() {
-		List<List<Integer>> emptyCells = new ArrayList<>();
-
-		for (int i = 0; i < gameBoard.size(); i++) {
-			List<String> line = gameBoard.get(i);
-			for (int j = 0; j < gameBoard.get(0).size(); j++) {
-				if (line.get(j).equals("_")) {
-					emptyCells.add(List.of(i, j));
-				}
-			}
-		}
-
-		int randomCellIndex = ThreadLocalRandom.current().nextInt(emptyCells.size());
-
-		List<Integer> cellToPutAiStep = emptyCells.get(randomCellIndex);
-
-		gameBoard.get(cellToPutAiStep.get(0)).set(cellToPutAiStep.get(1), "O");
 	}
 
 	public States getGameState() {
 		return gameState;
 	}
 
-	private boolean checkCell(String cell) {
-		return cell.equals("O") || cell.equals("_") || cell.equals("X");
-	}
-
 	private void defineState() {
-		if (Math.abs(xCounter - oCounter) > 1) {
-			gameState = States.IMPOSSIBLE;
-			return;
-		}
-
 		Map<String, Integer> xoRowCounters = new HashMap<>(Map.of("xCounter", 0, "oCounter", 0));
 
 		for (int i = 0; i < 3; i++) {
@@ -130,7 +105,7 @@ public class TicTacToeEngine {
 		switchCheckRowResult(xoRowCounters, diagonal2State);
 
 		if (xoRowCounters.get("xCounter") == 0 && xoRowCounters.get("oCounter") == 0) {
-			if (xCounter + oCounter == gameBoard.size() * gameBoard.size()) {
+			if (movesCounter == gameBoard.size() * gameBoard.size()) {
 				gameState = States.DRAW;
 			} else {
 				gameState = States.NOT_FINISHED;
@@ -224,19 +199,5 @@ public class TicTacToeEngine {
 		X_WIN,
 		O_WIN,
 		NOBODY
-	}
-
-	private enum Level {
-		EASY("easy");
-
-		private final String name;
-
-		Level(String name) {
-			this.name = name;
-		}
-
-		public String getName() {
-			return name;
-		}
 	}
 }
